# SteadyStateCombined

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  paper-evaluation.yml  tests.yml
examples/: run_combined_pareto.py  run_fixed_gain_evaluation.py  run_gain_optimized_evaluation.py
scripts/: analyze_results.py  export_results_to_paper.py  generate_latex_tables.py
src/steady_state_combined/: __init__.py  combined.py  combined_pareto.py  ellipsoidal.py  examples.py  riccati.py
tests/: test_combined_pareto.py  test_lmi_dare_equivalence.py  test_riccati_sweep.py  test_smoke.py
